test/positive/feature_accessstaticfield.java

public class feature_accessstaticfield {
  public feature_accessstaticfield() {}
  public int m() {
    return java.util.Calendar.MONDAY;
  }
}

