test/negative/feature_supermethodcall.java

public class feature_supermethodcall {
  public feature_supermethodcall() {}
  public String m() {
    return super.toString();
  }
  public String toString() {
    return "xyz";
  }
}

